# AP2024

hw_1/: 1-solution.py  2-solution.py  3-solution.py
hw_1/artifacts/: 1-test-result.txt  1-with-empty-lines.txt  1-without-empty-lines.txt  2-test-result.txt  3-RESULT.txt  3-punctuation.txt  3-simple.txt
hw_2/: 1-solution.py  2-solution.py  Dockerfile  module1.py  pyproject.toml
hw_2/artifacts/: 1-RESULT.tex  2-LINK.txt  2-RESULT.tex
hw_2/src/AP2024/: module1.py
hw_2/src/AP2024.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hw_3/: solution1.py  solution2.py  solution3.py
hw_3/artifacts/3.1/: matrix*.txt  matrix+.txt  matrix@.txt
hw_4/: solution1.py  solution2.py  solution3.py
hw_4/artifacts/: 1-RESULT.txt  3-RESULT.txt  compare-measures.txt  processes-measure.txt  threads-measure.txt
